[package]
name    = "mesh"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[features]
default = ["native", "uhd", "mqtt", "ws"]
# Native (non-wasm) build — enables tokio's full async runtime.
native  = ["tokio/rt", "tokio/rt-multi-thread", "tokio/time", "tokio/sync"]
# UHD (USRP Hardware Driver) support — forwards to lora crate.
uhd     = ["lora/uhd"]
# MQTT bridge support.
mqtt    = ["dep:rumqttc"]
# WebSocket server for external tool integration.
ws      = ["dep:tokio-tungstenite", "dep:futures-util", "dep:serde", "dep:serde_json"]
# WebAssembly build — uses gloo-timers and wasm-bindgen entry point.
wasm    = [
    "dep:gloo-timers",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:console_error_panic_hook",
]

[dependencies]
# PHY layer (submodule — no C deps by default; UHD gated on feature)
lora = { path = "../lora-rs", default-features = false }

# GUI (used by the mesh_sim binary)
egui      = "0.33"
eframe    = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }

# AES-256-CTR encryption (pure Rust, no_std-compatible)
aes = "0.8"
ctr = "0.9"

# Protobuf encode/decode
prost = "0.13"

# Random node ID generation
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

# FFT for spectrum analyzer (used by mesh_sim binary via lora::ui types)
rustfft = "6"

# MQTT bridge (native only, used by mesh_node --mqtt)
rumqttc = { version = "0.24", optional = true }

# WebSocket server (native only, used by mesh_node --ws)
tokio-tungstenite = { version = "0.24", optional = true }
futures-util      = { version = "0.3", optional = true }
serde             = { version = "1", features = ["derive"], optional = true }
serde_json        = { version = "1", optional = true }

# Async runtime (native only)
tokio = { version = "1", default-features = false, optional = true }

# WASM async timers
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

# WASM entry point
wasm-bindgen             = { version = "0.2",  optional = true }
wasm-bindgen-futures     = { version = "0.4",  optional = true }
web-sys                  = { version = "0.3",  optional = true, features = ["Window", "Document", "HtmlCanvasElement"] }
console_error_panic_hook = { version = "0.1",  optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
# Uncomment when adding .proto compilation in a future phase:
# prost-build = "0.13"
