[package]
name        = "mesh"
version     = "0.1.0"
edition     = "2024"
license     = "GPL-3.0-only"
default-run = "mesh"

[features]
default = ["uhd", "server", "desktop"]
# UHD (USRP Hardware Driver) support — forwards to lora crate.
uhd     = ["lora/uhd"]
# axum-based HTTP+WS server hosted by the combined `mesh` binary.
server  = ["dep:axum", "dep:serde_json", "dep:tokio-stream", "dep:tower-http"]
# Native desktop egui window for the `mesh` binary. Off → pure server build.
desktop = []
# WebAssembly browser GUI (mesh_web bin) — same view code, WS-backed transport.
wasm    = [
    "dep:gloo-timers",
    "dep:gloo-net",
    "dep:futures-util",
    "dep:serde_json",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:console_error_panic_hook",
]

[dependencies]
# PHY layer (submodule — no C deps by default; UHD gated on feature)
lora = { path = "../lora-rs", default-features = false }

# egui GUI runtime — used by the `view` module (compiled when desktop or wasm
# is on). The dep is unconditional because `lora` re-exports egui widget types
# (SpectrumPlot, WaterfallPlot) regardless.
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }

# AES-256-CTR encryption (pure Rust, no_std-compatible)
aes = "0.8"
ctr = "0.9"

# Protobuf encode/decode
prost = "0.13"

# Random node ID generation
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

# FFT for spectrum analyzer (used by mesh::radio via lora::ui types).
rustfft = "6"

# QR code generation for the GitHub repo link in the GUI.
qrcode = "0.14"

# Futures combinators — used on the wasm side for the WS Sink+Stream pair.
futures-util = { version = "0.3", optional = true, features = ["sink"] }

# Serde derives are always on — the Command enum needs Deserialize for the
# server feature and Serialize-on-wire ergonomics; serde_json is only pulled
# in when the server feature or the wasm feature is enabled.
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }

# HTTP+WS server (server feature only).
axum         = { version = "0.7", default-features = false, features = ["http1", "ws", "tokio"], optional = true }
tokio-stream = { version = "0.1", default-features = false, optional = true }
tower-http   = { version = "0.6", default-features = false, features = ["fs"], optional = true }

# Async channels + runtime. Sync primitives are always on (radio uses them on
# both native and wasm); the runtime is only on native via the target section
# below.
tokio = { version = "1", default-features = false, features = ["sync"] }

# WASM async timers + WebSocket client (futures-based).
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
gloo-net    = { version = "0.6", default-features = false, features = ["websocket"], optional = true }

# WASM entry point
wasm-bindgen             = { version = "0.2",  optional = true }
wasm-bindgen-futures     = { version = "0.4",  optional = true }
js-sys                   = { version = "0.3",  optional = true }
web-sys                  = { version = "0.3",  optional = true, features = ["Window", "Document", "HtmlCanvasElement"] }
console_error_panic_hook = { version = "0.1",  optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros", "signal"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[[bin]]
name = "mesh_web"
path = "src/bin/mesh_web.rs"
required-features = ["wasm"]

[build-dependencies]
prost-build = "0.13"
